# spm

./: Cargo.toml
src/: db.rs  gui.rs  main.rs  mk_ui.rs  password.rs
ui/: app-window.slint
